Fixed image on homepage
It was too large because of ommitting a `width: 100%` rule on the .image-item

--- a/css/3-layout/_layout.sass
+++ b/css/3-layout/_layout.sass
@@ -28,6 +28,7 @@
   .home &
     height: auto
     margin: auto
+    width: 100%
 
   &:hover, &:focus
     // Nah, this is old-school
